--- a/website/www/css/index.css
+++ b/website/www/css/index.css
@@ -4,16 +4,18 @@
     Dark Cream:     #FFDB89
     Light Cream:    #FFF6C3 */
 
-body {
+body, html {
     height: 100%;
     width: 100%;
     background-color: #F9F7F7;
-    margin: 0rem;
+    margin: 0;
     overflow: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 #div-title {
-    height: 100%;
+    flex: 0 1 auto;
 }
 
 
@@ -50,6 +52,7 @@ body {
     box-shadow: rgba(99, 99, 99, 0.2) 0px 0px 8px 0px;
     width: 60%;
     margin: auto;
+    flex: 0 1 auto;
 }
 
 #div-search-bar:hover {
@@ -91,6 +94,9 @@ body {
     color: #112D4E;
 }
 
+#results {
+    flex: 1 1 auto;
+}
 
 #current-result {
     display: grid;
@@ -199,4 +205,13 @@ body {
     margin-left: 5%;
     margin-right: 5%;
     height: 10vh;
+}
+
+#dev-info {
+    flex: 0 1 5vh;
+    text-align: center;
+}
+
+a {
+    color: #112D4E;
 }
